update w blog url

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>Dear All Other Generations: Generation Z is Suffering and We are Looking for a Brighter Future</h2>
+          <p>How Gen-Z has been faced with a multitude of issues and how they are trying to cope with it</p>
+          <a href="https://medium.com/@emmak03/dear-all-other-generations-generation-z-is-suffering-and-we-are-looking-for-a-brighter-future-3938df0984d3" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
