--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
+          <p>This is a placeholder for now!</p>
           <a href="#" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
@@ -46,9 +46,9 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <h2>From Textbooks to Tiktoks: The Life of a Student Content Creator</h2>
+          <p>A 20-minute deepdive into the life of a student content creator!</p>
+          <a href="https://on.soundcloud.com/4hdrE4NdEbJogWHTA" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://sites.google.com/view/the-calculus-corner/home" class="button" target="_blank">Math Website</a>
     </div>
 
   </div>
