--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>This is a placeholder for now!</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Shojo Manga Recommendations!</h2>
+          <p>Are you looking for good shojo recommendations but don't know where to start? You've come to the right place!</p>
+          <a href="https://www.youtube.com/watch?v=nqIjx52zXfY" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
