--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="images/pfp.png" alt="Selfie of myself">
     </div>
     <div class="intro">
-      I'm <span class="name"><strong>Emma Kim</strong></span>, Math education major, Hoping to be a math teacher, and I enjoy reading manga!
+      Hello! I'm <span class="name"><strong>Emma Kim</strong></span>. I'm a math education major and I'm hoping to be a math teacher. I enjoy reading manga and spending time with my cat!
     </div>
     <div class="section-header">
       <h1>My work</h1>
@@ -51,7 +51,7 @@
         <div class="description">
           <h2>From Textbooks to Tiktoks: The Life of a Student Content Creator</h2>
           <p>A 20-minute deepdive into the life of a student content creator!</p>
-          <a href="https://on.soundcloud.com/4hdrE4NdEbJogWHTA" class="external-link" target="_blank">Listen</a>
+          <a href="https://soundcloud.com/william-bae-764584173/from-textbooks-to-tiktoks-the-life-of-a-student-content-creator" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -59,10 +59,11 @@
     <!-- Replace # with PDF from Google Docs, or replace the entire section with whatever you want. Or delete it! Or add another section below it!-->
     <div class="section-header">
       <h1>About me</h1>
+      <p>Below is a link to a math website I co-created to help review certain lessons of Calculus I!</p>
     </div>
 
     <div class="links-container">
-      <a href="https://sites.google.com/view/the-calculus-corner/home" class="button" target="_blank">Math Website</a>
+      <a href="https://sites.google.com/view/the-calculus-corner/home" class="button" target="_blank">The Calculus Corner</a>
     </div>
 
   </div>
